fix the database bugs

--- a/templates/Accounting.html
+++ b/templates/Accounting.html
@@ -10,8 +10,8 @@
     its accouting page
   </h1>
 
-  <form action="form_action.asp" method="get">
-    <p>First name:{{listtest[0]}} </p>
-    <p>Last name: {{listtest[1]}}</p>
-  </form>
+  <ol>
+    <li>First name:{{listtest[0]}} </li>
+    <li>Last name: {{listtest[1]}}</li>
+    </ol>
 </body>
