--- a/templates/Accounting.html
+++ b/templates/Accounting.html
@@ -10,11 +10,14 @@
     <tr>
       <th>Name</th>
       <th>Price</th>
+      <th>Date</th>
     </tr>
 
     <tr>
-    {% for item in listtest %}
-    <td>{{item}}</td>
+    {% for item in DBresult %}
+    <td>{{item[1]}}</td>
+    <td>{{item[2]}}</td>
+    <td>{{item[3]}}</td>
     {% endfor %}
     </tr>
 
