dbstore function cannot work because conn need in same thread, so I need another method to fix that

--- a/templates/Accounting.html
+++ b/templates/Accounting.html
@@ -21,6 +21,13 @@
     {% endfor %}
     </tr>
 
+    <form method="POST">
+      {{ form.hidden_tag() }}
+      {{ form.name.label  }} {{ form.name() }}
+      {{ form.price.label }} {{ form.price() }}
+      {{ form.submit() }}
+    </form>
+
   </table>
-  
+
 </body>
