--- a/templates/Accounting.html
+++ b/templates/Accounting.html
@@ -23,6 +23,16 @@
   </table>
  </div>
 <br></br>
+
+<div>
+  <form method="POST">
+    {{ query_form.hidden_tag() }}
+    {{ query_form.submit() }}
+    </form>
+</div>
+
+<br></br>
+
 <div>
   <form method="POST">
     {{ form.hidden_tag() }}
@@ -30,6 +40,6 @@
     {{ form.price.label }} {{ form.price() }}
     {{ form.submit() }}
   </form>
-  </div>
+</div>
   
 </body>
