--- a/templates/Accounting.html
+++ b/templates/Accounting.html
@@ -27,7 +27,7 @@
 <div>
   <form method="POST">
     {{ query_form.hidden_tag() }}
-    {{ query_form.submit() }}
+    {{ query_form.query() }}
     </form>
 </div>
 
